fix the local hospital info still visible when user has seleccted hidden sidebar

--- a/css/sidebar/hospital.css
+++ b/css/sidebar/hospital.css
@@ -241,3 +241,6 @@ div#hospital-info.hospital[selected_lvl]{
 div#hospital-info.hospital[selected_lvl=county]{
   display: initial;
 }
+div#hospital-info.hospital[sidebarstatus=hidden]{
+  display: none;
+}
